
add_library(SDL2 UNKNOWN IMPORTED)
set_property(TARGET SDL2 APPEND PROPERTY IMPORTED_LOCATION "${THIRDPARTY_DIR}/platform/ios/Release\$(EFFECTIVE_PLATFORM_NAME)/libSDL2.a")
list(APPEND TARGET_LIBRARIES SDL2)

add_library(SDL_test UNKNOWN IMPORTED)
set_property(TARGET SDL_test APPEND PROPERTY IMPORTED_LOCATION  "${THIRDPARTY_DIR}/platform/ios/Release\$(EFFECTIVE_PLATFORM_NAME)/libSDL2test.a")
list(APPEND TARGET_LIBRARIES SDL_test)

set_target_properties(SDL2 PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${THIRDPARTY_DIR}/includes/SDL2)

list(APPEND TARGET_INCLUDE_DIRS ${THIRDPARTY_DIR}/includes/SDL2)

set(ASSET_CATALOGUE ${CMAKE_CURRENT_SOURCE_DIR}/resources/Assets.xcassets)
list(APPEND TARGET_RESOURCES ${ASSET_CATALOGUE})

SET(CMAKE_OSX_SYSROOT "iphoneos")
# SET(CMAKE_OSX_SYSROOT "iOS")
SET(CMAKE_XCODE_EFFECTIVE_PLATFORMS "-iphoneos;-iphonesimulator")

set(CMAKE_XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "11.0" CACHE STRING "Minimum supported iOS version")

# https://svn.scolring.org/trunk/dependencies/CMake/toolchain/IOS.toolchain.cmake
set(IOS_IPHONEOS_ARCHS "arm64 armv7" CACHE STRING "Target iPhone architectures")
set(IOS_IPHONESIMULATOR_ARCHS "i386 x86_64" CACHE STRING "Target iPhone simulator architectures")
# Set iPhoneOS architectures
set(CMAKE_XCODE_ATTRIBUTE_ARCHS[sdk=iphoneos*] "${IOS_IPHONEOS_ARCHS}")
set(CMAKE_XCODE_ATTRIBUTE_VALID_ARCHS[sdk=iphoneos*] "${IOS_IPHONEOS_ARCHS}")

# Set iPhoneSimulator architectures
set(CMAKE_XCODE_ATTRIBUTE_ARCHS[sdk=iphonesimulator*] "${IOS_IPHONESIMULATOR_ARCHS}")
set(CMAKE_XCODE_ATTRIBUTE_VALID_ARCHS[sdk=iphonesimulator*] "${IOS_IPHONESIMULATOR_ARCHS}")


list(APPEND TARGET_LIBRARIES "-framework OpenGLES")
list(APPEND TARGET_LIBRARIES "-framework UIKit")
list(APPEND TARGET_LIBRARIES "-framework Foundation")
list(APPEND TARGET_LIBRARIES "-framework AVFoundation")
list(APPEND TARGET_LIBRARIES "-framework GameController")
list(APPEND TARGET_LIBRARIES "-framework CoreMotion")
list(APPEND TARGET_LIBRARIES "-framework CoreGraphics")
list(APPEND TARGET_LIBRARIES "-framework QuartzCore")
list(APPEND TARGET_LIBRARIES "-framework Metal")
list(APPEND TARGET_LIBRARIES "-framework OpenAL")
list(APPEND TARGET_LIBRARIES "-framework AudioToolbox")

add_executable( ${CMAKE_PROJECT_NAME}-exe MACOSX_BUNDLE ${TARGET_PROJECT_SOURCES} ${TARGET_MAIN_SOURCES} ${TARGET_RESOURCES})

set(XCODE_DEVELOPMENT_TEAM $ENV{XCODE_DEVELOPMENT_TEAM})

# macOS and iOS and tvOS
SET_TARGET_PROPERTIES(
    ${CMAKE_PROJECT_NAME}-exe PROPERTIES
    MACOSX_BUNDLE TRUE
    XCODE_ATTRIBUTE_INSTALL_PATH "/Applications"
    XCODE_ATTRIBUTE_DEVELOPMENT_TEAM ${XCODE_DEVELOPMENT_TEAM}
)


SET_SOURCE_FILES_PROPERTIES( ${TARGET_RESOURCES} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
SET_TARGET_PROPERTIES(
    ${CMAKE_PROJECT_NAME}-exe PROPERTIES
    RESOURCE "${ASSET_CATALOGUE}"
    XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC YES
    XCODE_ATTRIBUTE_INSTALL_PATH "${CMAKE_BINARY_DIR}/ProductRelease"
    XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_LAUNCHIMAGE_NAME "LaunchImage"
    XCODE_ATTRIBUTE_PRODUCT_NAME "${CMAKE_PROJECT_NAME}"
    XCODE_ATTRIBUTE_ENABLE_BITCODE NO
    XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "iPhone Developer: James Folk"
    )

SET_TARGET_PROPERTIES(
    ${CMAKE_PROJECT_NAME}-exe PROPERTIES
    XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
    XCODE_ATTRIBUTE_COMBINE_HIDPI_IMAGES "NO"
    MACOSX_BUNDLE_INFO_PLIST "${CMAKE_BINARY_DIR}/Info.plist"
    XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_APPICON_NAME "AppIcon"
    XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER ${TARGET_BUNDLE_ID}.ios
    XCODE_ATTRIBUTE_SDKROOT "iphoneos"
    )


set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY XCODE_STARTUP_PROJECT ${CMAKE_PROJECT_NAME}-exe)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/resources/Info.plist.in ${CMAKE_BINARY_DIR}/Info.plist)

target_compile_definitions( ${CMAKE_PROJECT_NAME}-exe PUBLIC ${TARGET_DEFINITIONS})
target_link_libraries( ${CMAKE_PROJECT_NAME}-exe ${TARGET_LIBRARIES})
set_property(TARGET ${CMAKE_PROJECT_NAME}-exe PROPERTY INCLUDE_DIRECTORIES ${TARGET_INCLUDE_DIRS})


