list(APPEND TARGET_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

set( TARGET_PROJECT_SOURCES ${TARGET_PROJECT_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/GraphicsPlatform.h )

add_library(SDL2 UNKNOWN IMPORTED)
set_property(TARGET SDL2 APPEND PROPERTY IMPORTED_LOCATION  "${THIRDPARTY_DIR}/platform/${TARGET_PLATFORM}/libSDL2.a")
list(APPEND TARGET_LIBRARIES SDL2)

add_library(SDL2main UNKNOWN IMPORTED)
set_property(TARGET SDL2main APPEND PROPERTY IMPORTED_LOCATION  "${THIRDPARTY_DIR}/platform/${TARGET_PLATFORM}/libSDL2main.a")
list(APPEND TARGET_LIBRARIES SDL2main)

set_target_properties(SDL2 PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${THIRDPARTY_DIR}/includes/SDL2)
list(APPEND TARGET_INCLUDE_DIRS ${THIRDPARTY_DIR}/includes/SDL2)

list(APPEND TARGET_LIBRARIES ${CMAKE_DL_LIBS})
list(APPEND TARGET_LIBRARIES "sndio")

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
list(APPEND TARGET_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})

# add_library(curl UNKNOWN IMPORTED)
# set_property(TARGET curl APPEND PROPERTY IMPORTED_LOCATION  "${THIRDPARTY_DIR}/platform/${TARGET_PLATFORM}/libcurl.dylib")
# list(APPEND TARGET_LIBRARIES curl)
# set_target_properties(curl PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${THIRDPARTY_DIR}/includes/curl)
# list(APPEND TARGET_INCLUDE_DIRS ${THIRDPARTY_DIR}/includes/curl)

list(APPEND TARGET_INCLUDE_DIRS ${THIRDPARTY_DIR}/includes/rapidjson)
list(APPEND TARGET_INCLUDE_DIRS ${THIRDPARTY_DIR}/includes/nlohmann)
list(APPEND TARGET_INCLUDE_DIRS ${THIRDPARTY_DIR}/includes/stb)
list(APPEND TARGET_INCLUDE_DIRS ${THIRDPARTY_DIR}/includes/glm)
list(APPEND TARGET_INCLUDE_DIRS ${THIRDPARTY_DIR}/includes/NJLICEngine)

find_package(OpenGL REQUIRED)
if (OPENGL_FOUND)
    MESSAGE(STATUS "OPENGL_INCLUDE_DIR ${OPENGL_INCLUDE_DIR}")
    MESSAGE(STATUS "OPENGL_LIBRARIES ${OPENGL_LIBRARIES}")
    list(APPEND TARGET_LIBRARIES "${OPENGL_LIBRARIES}")
    list(APPEND TARGET_INCLUDE_DIRS "${OPENGL_INCLUDE_DIR}")
endif ()

# set(ASSET_CATALOGUE ${CMAKE_CURRENT_SOURCE_DIR}/resources/Assets.xcassets)
# list(APPEND TARGET_RESOURCES ${ASSET_CATALOGUE})

# add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
#     COMMAND ${CMAKE_COMMAND} -E copy_directory
#     ${TARGET_RESOURCES} ${CMAKE_CURRENT_BINARY_DIR}/assets
#     )

add_executable( ${PROJECT_NAME} ${TARGET_PROJECT_SOURCES} ${TARGET_MAIN_SOURCES} ${TARGET_INCLUDE_DIRS} ${TARGET_RESOURCES} )

set(MY_APP_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

set_target_properties(${PROJECT_NAME} PROPERTIES
    OUTPUT_NAME "${TARGET_EXECUTABLE_NAME}"
    # RESOURCE "${TARGET_RESOURCES}"
    INCLUDE_DIRECTORIES "${TARGET_INCLUDE_DIRS}"
    )

target_compile_definitions( ${PROJECT_NAME} PUBLIC ${TARGET_DEFINITIONS})
target_link_libraries( ${PROJECT_NAME} ${TARGET_LIBRARIES})

install(DIRECTORY ${TARGET_RESOURCES} DESTINATION bin)

install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Targets
    RUNTIME DESTINATION bin)

if(TARGET_PROJECT_SOURCES)
    add_library(${CMAKE_PROJECT_NAME}-static STATIC ${TARGET_PROJECT_SOURCES})
    target_compile_definitions(${CMAKE_PROJECT_NAME}-static PUBLIC ${TARGET_DEFINITIONS})
    target_link_libraries( ${CMAKE_PROJECT_NAME}-static ${TARGET_LIBRARIES})
    set_property(TARGET ${CMAKE_PROJECT_NAME}-static PROPERTY INCLUDE_DIRECTORIES ${TARGET_INCLUDE_DIRS})
    set_property(TARGET ${CMAKE_PROJECT_NAME}-static PROPERTY OUTPUT_NAME "${TARGET_EXECUTABLE_NAME}")
    set_property(TARGET ${CMAKE_PROJECT_NAME}-static PROPERTY XCODE_ATTRIBUTE_PRODUCT_NAME ${TARGET_EXECUTABLE_NAME})

    install(TARGETS ${CMAKE_PROJECT_NAME}-static EXPORT ${CMAKE_PROJECT_NAME}Targets
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION archive
        RUNTIME DESTINATION bin)

    set(INCLUDE_FILES "")
    foreach(include_dir ${TARGET_INCLUDE_DIRS})
        set(_INCLUDE_FILES "")
        file(GLOB _INCLUDE_FILES ${include_dir}/*.h*)
        list(APPEND INCLUDE_FILES ${INCLUDE_FILES})
    endforeach()

    install(FILES ${INCLUDE_FILES} DESTINATION include/${CMAKE_PROJECT_NAME})

    # add_library(${CMAKE_PROJECT_NAME}Framework SHARED ${TARGET_PROJECT_SOURCES})
    # target_compile_definitions(${CMAKE_PROJECT_NAME}Framework PUBLIC ${TARGET_DEFINITIONS})
    # target_link_libraries( ${CMAKE_PROJECT_NAME}Framework ${TARGET_LIBRARIES})
    # set_property(TARGET ${CMAKE_PROJECT_NAME}Framework PROPERTY INCLUDE_DIRECTORIES ${TARGET_INCLUDE_DIRS})
    # set_property(TARGET ${CMAKE_PROJECT_NAME}Framework PROPERTY OUTPUT_NAME "${TARGET_EXECUTABLE_NAME}Framework")
    # set_property(TARGET ${CMAKE_PROJECT_NAME}Framework PROPERTY XCODE_ATTRIBUTE_PRODUCT_NAME "${TARGET_EXECUTABLE_NAME}Framework")
    # set_target_properties(${CMAKE_PROJECT_NAME}Framework PROPERTIES
    #     FRAMEWORK TRUE
    #     FRAMEWORK_VERSION C
    #     XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER njligames.${TARGET_PLATFORM}.${PROJECT_NAME}.framework
    #     MACOSX_FRAMEWORK_INFO_PLIST ${CMAKE_BINARY_DIR}/Info.plist
    #     VERSION 1.0.0
    #     SOVERSION 1.0.0
    #     PUBLIC_HEADER dynamicFramework.h
    #     XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "Mac Developer"
    #     )

    # install(TARGETS ${CMAKE_PROJECT_NAME}Framework EXPORT ${CMAKE_PROJECT_NAME}Targets
    #     LIBRARY DESTINATION lib
    #     ARCHIVE DESTINATION archive
    #     RUNTIME DESTINATION bin
    #     FRAMEWORK DESTINATION framework)

    set(CLANG_FORMAT_BIN "/usr/local/bin/clang-format" CACHE STRING "use: `brew install clang-format` to install")
    add_custom_target(
        clang-format
        COMMAND ${CLANG_FORMAT_BIN} -style=file -i ${TARGET_PROJECT_SOURCES} ${TARGET_MAIN_SOURCES} -verbose
        SOURCES
        "${CMAKE_SOURCE_DIR}/.clang-format"
)

endif()


if(BUILD_TEST)
    enable_testing()
    add_subdirectory(test)
endif()
