list(APPEND TARGET_INCLUDE_DIRS ${GTEST_INCLUDE_DIRS})
list(APPEND TARGET_INCLUDE_DIRS ${GMOCK_INCLUDE_DIRS})
list(APPEND TARGET_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB HDRS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

add_executable(${CMAKE_PROJECT_NAME}-static-test ${SRCS} ${HDRS})

add_dependencies(${CMAKE_PROJECT_NAME}-static-test ${CMAKE_PROJECT_NAME}-static)

target_link_libraries(
    ${CMAKE_PROJECT_NAME}-static-test
    ${CMAKE_PROJECT_NAME}-static
    ${GTEST_LIBRARY}
    ${GMOCK_LIBRARY}
    )

set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY INCLUDE_DIRECTORIES ${TARGET_INCLUDE_DIRS})

add_test(NAME ${CMAKE_PROJECT_NAME}-static-test COMMAND ${CMAKE_PROJECT_NAME}-static-test)




